--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mp4-stream",
+  "name": "@henningm/mp4-stream",
   "version": "2.0.2",
   "description": "Streaming mp4 encoder and decoder",
   "main": "index.js",
